* fix alignment issue * bug-fix multiple device being added

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   font-size: 25px;
 }
 .contentContainer {
-  margin-top: 100px;
+  margin-top: 30px;
 }
 .card-button__block{
   display: inline;
@@ -18,4 +18,10 @@ hr {
 .loading-state__block {
   margin-left: 50%;
   margin-top: 100px;
+}
+.device-title__section{
+  margin-top: 85px;
+  font-size: larger;
+  font-family: sans-serif;
+  margin-bottom: 12px;
 }
